<resources>
    <string name="app_name">Ecommerce</string>
    <string name="fresh_apple_fragrance">Fresh Apple Fragrance</string>
    <string name="product_details">Product Details</string>
    <string name="available">See If Available</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_navigation__drawer">Navigation_Drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="apples">Apples</string>
    <string name="bananas">Bananas</string>
    <string name="home">Home</string>
    <string name="get_your_apples_today">Get your apples today</string>
    <string name="free_shipping">FREE SHIPPING</string>
    <string name="welcome_home">Welcome Home</string>
    <string name="price">Ksh.00</string>
    <string name="category_dummy">Category Dummy</string>
    <string name="navigation_header">Navigation header</string>
    <string name="spongey_s_e_commerce">Spongey\'s E-commerce</string>
    <string name="spongey_ecommerce_spongey_com">spongey.ecommerce@spongey.com</string>
    <string name="admin">Admin</string>
    <string name="add_product">Add Product</string>
    <string name="name">Name</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="search_product">Search product ...</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="your_cart">Your Cart</string>
    <string name="submit_order">Submit Order</string>
    <string name="credit_card_number">Credit card number ...</string>
    <string name="address">Address</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name ...</string>
    <string name="todo">TODO</string>
</resources>
