<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/actionHome"
                android:icon="@drawable/ic_menu_gallery"
                android:orderInCategory="100"
                android:title="@string/home"
                app:showAsAction="never"/>

        <item
                android:id="@+id/actionApples"
                android:icon="@drawable/ic_menu_gallery"
                android:orderInCategory="100"
                android:title="@string/apples"
                app:showAsAction="never"/>

        <item
                android:id="@+id/actionBananas"
                android:icon="@drawable/ic_menu_gallery"
                android:orderInCategory="100"
                android:title="@string/bananas"
                app:showAsAction="never"/>
    </group>
</menu>