<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ProductDetails">

    <ImageView
            android:id="@+id/productDetailsImage"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/appleicecream"
            android:layout_centerHorizontal="true"/>
    <TextView
            android:id="@+id/productDetailsTitle"
            android:layout_below="@+id/productDetailsImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_details"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:padding="16dp"/>

    <TextView
            android:id="@+id/productDetailsPrice"
            android:layout_below="@+id/productDetailsTitle"
            android:layout_centerHorizontal="true"
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:targetApi="jelly_bean"/>

    <Button
            android:id="@+id/availabilityButton"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/productDetailsPrice"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:padding="15dp"
            android:background="@color/colorPrimary"
            tools:targetApi="jelly_bean"/>

</RelativeLayout>